--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,30 @@
         <video class="videosize" autoplay="autoplay" muted="muted" loop="loop">
             <source src="assets/video/main-page.mp4" type="video/mp4">
         </video>
+        
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/DSC02189.jpg" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/DSC04692.jpg" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/DSC02293.jpg" class="d-block" alt="...">
+                </div>
+
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
          
     </section>
     <footer>
