added style to style.css

--- a/aboutme.html
+++ b/aboutme.html
@@ -59,21 +59,21 @@
         <video class="videosize" autoplay="autoplay" muted="muted" loop="loop">
             <source src="assets/video/main-page.mp4" type="video/mp4">
         </video>
-        <div class="row aboutme">
+        <div class="row aboutme no-gutters">
             <div class="col-12 col-md-6 col-lg-4 aboutme-content aboutme-text">
                 <p>Hello and welcome! My name is Gleb and I am a model based in Toronto, Canada. 
                 I’ve started my modelling career back in 2014 when I walked a runway of the first Toronto Men’s Fashion Week. 
                 Since then I’ve been constantly doing fashion shows and photoshoots for various Canadian designers and brands. 
-                Fell free to check out my Gallery and contact me via contact form or other social platforms. </p>
+                Feel free to check out my Gallery and contact me via contact form or other social platforms. </p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 aboutme-content">
                 <img src="assets/images/109+.jpg" alt="profile picture">
             </div>
             <div class="col-12 col-md-6 col-lg-4 aboutme-content measurements">
-                <h5 style="text-align:center">Measurements</h5>
+                <h3 class="m-padding">Measurements</h3>
                 <div class="row">    
                     <div class="col">
-                        <p>Height:<br>Weight:<br>Jacket:<br>Waist:<br>Inseam:<br>Neck:<br>Shoe:<br>Hair:<br>Eyes:</p>
+                        <p class="m-padding">Height:<br>Weight:<br>Jacket:<br>Waist:<br>Inseam:<br>Neck:<br>Shoe:<br>Hair:<br>Eyes:</p>
                     </div>
                     <div class="col">
                         <p>6'2"<br>175lb<br>42<br>32<br>32<br>16.5<br>12<br>Brown<br>Blue/grey</p>
