added content to gallery.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -59,11 +59,11 @@
         <video class="videosize" autoplay="autoplay" muted="muted" loop="loop">
             <source src="assets/video/main-page.mp4" type="video/mp4">
         </video>
-        <div class="row aboutme no-gutters">
+        <div class="row aboutme no-gutters justify-content-md-center">
             <div class="col-12 col-md-6 col-lg-4 aboutme-content aboutme-text">
                 <p>Hello and welcome! My name is Gleb and I am a model based in Toronto, Canada. 
                 I’ve started my modelling career back in 2014 when I walked a runway of the first Toronto Men’s Fashion Week. 
-                Since then I’ve been constantly doing fashion shows and photoshoots for various Canadian designers and brands. 
+                Since then I’ve been constantly working as a model with various Canadian designers and brands. 
                 Feel free to check out my Gallery and contact me via contact form or other social platforms. </p>
             </div>
             <div class="col-12 col-md-6 col-lg-4 aboutme-content">
@@ -76,7 +76,7 @@
                         <p class="m-padding">Height:<br>Weight:<br>Jacket:<br>Waist:<br>Inseam:<br>Neck:<br>Shoe:<br>Hair:<br>Eyes:</p>
                     </div>
                     <div class="col">
-                        <p>6'2"<br>175lb<br>42<br>32<br>32<br>16.5<br>12<br>Brown<br>Blue/grey</p>
+                        <p>6'2" (188cm)<br>175lb (80kg)<br>42<br>32<br>32<br>16.5<br>12 (EUR46)<br>Brown<br>Blue/grey</p>
                     </div>
                 </div>
             </div>
