--- a/gallery.html
+++ b/gallery.html
@@ -63,13 +63,37 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/DSC02189.jpg" class="d-block" alt="...">
+                    <img src="assets/images/DSC_1415.JPG" class="d-block" alt="image1">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/DSC04692.jpg" class="d-block" alt="...">
+                    <img src="assets/images/DSC04692.jpg" class="d-block" alt="image2">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/DSC02293.jpg" class="d-block" alt="...">
+                    <img src="assets/images/DSC02293.jpg" class="d-block" alt="image3">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/001.jpg" class="d-block" alt="image4">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/018.jpg" class="d-block" alt="image5">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/0228_Gleb-131.jpg" class="d-block" alt="image6">
+                </div>
+                 <div class="carousel-item">
+                    <img src="assets/images/0228_Gleb-21.jpg" class="d-block" alt="image7">
+                </div>
+                 <div class="carousel-item">
+                    <img src="assets/images/0228_Gleb-77.jpg" class="d-block" alt="image8">
+                </div>
+                 <div class="carousel-item">
+                    <img src="assets/images/093.jpg" class="d-block" alt="image9">
+                </div>
+                 <div class="carousel-item">
+                    <img src="assets/images/DSC02189.jpg" class="d-block" alt="image10">
+                </div>
+                 <div class="carousel-item">
+                    <img src="assets/images/DSC01108.jpg" class="d-block" alt="image11">
                 </div>
 
 
