pictures size modified

--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/DSC_1415.JPG" class="d-block" alt="image1">
+                    <img src="assets/images/DSC_1415.jpg" class="d-block" alt="image1">
                 </div>
                 <div class="carousel-item">
                     <img src="assets/images/DSC04692.jpg" class="d-block" alt="image2">
