--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <div class="center-form">
                     <form>
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="text" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
                         <textarea rows="5" name="message" id="message" class="form-control" placeholder="Message" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
