added no-gutters class to aboutme and contact, added bracket to style.css

--- a/aboutme.html
+++ b/aboutme.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 aboutme-content measurements">
                 <h3 class="m-padding">Measurements</h3>
-                <div class="row">    
+                <div class="row no-gutters">    
                     <div class="col">
                         <p class="m-padding">Height:<br>Weight:<br>Jacket:<br>Waist:<br>Inseam:<br>Neck:<br>Shoe:<br>Hair:<br>Eyes:</p>
                     </div>
