--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <source src="assets/video/main-page.mp4" type="video/mp4">
         </video>
 
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col">
                 
                 <div class="center-form">
